--- a/registro.css
+++ b/registro.css
@@ -7,7 +7,7 @@
     margin-bottom: 20px;
 }
 
-#registro-form button {
+.btn-principal {
     width: 100%;
     padding: 12px;
     margin-top: 20px;
@@ -21,7 +21,7 @@
     transition: background-color 0.2s;
 }
 
-#registro-form button:hover {
+.btn-principal:hover {
     background-color: var(--primary-hover-color);
 }
 
